--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,21 +1,25 @@
 cmake_minimum_required(VERSION 3.22)
+project(LilyPadEngine)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED YES)
 
-project(LilyPadEngine)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/vendor ${CMAKE_CURRENT_SOURCE_DIR}/src ${CMAKE_CURRENT_SOURCE_DIR}/rsc)
 
 # Add all cpp and hpp files to the library
 file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
 file(GLOB_RECURSE HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/src/*.hpp)
 
-find_package(OpenGL REQUIRED)
-find_package(GLEW REQUIRED)
-if (GLEW_FOUND)
-    message("Found package GLEW")
-else()
-    message("Could not find GLEW.")
-endif()
+file(GLOB_RECURSE SHADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/rsc/shaders/*.glsl)
+file(GLOB_RECURSE TEXTURE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/rsc/textures/*)
+
+foreach(SHADER_FILE ${SHADER_FILES})
+    file(COPY ${SHADER_FILE} DESTINATION ${CMAKE_BINARY_DIR}/rsc/shaders)
+endforeach()
+
+foreach(TEXTURE_FILE ${TEXTURE_FILES})
+    file(COPY ${TEXTURE_FILE} DESTINATION ${CMAKE_BINARY_DIR}/rsc/textures)
+endforeach()
 
 if (WIN32)
     add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/vendor/glfw-3.4)
@@ -23,12 +27,15 @@ else()
     find_package(glfw3 REQUIRED)
 endif()
 
+find_package(OpenGL REQUIRED)
+find_package(GLEW REQUIRED)
+
 add_executable(LilyPadEngine ${SOURCES} ${HEADERS})
 
+add_library(stb_image SHARED "vendor/stb_image.cpp")
 target_link_libraries(LilyPadEngine PRIVATE
-    GLEW::GLEW
-    OpenGL::GL
     glfw
+    OpenGL::GL
+    stb_image
+    GLEW::GLEW
 )
-
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)
