--- a/LilyPadEngine/tests/CMakeLists.txt
+++ b/LilyPadEngine/tests/CMakeLists.txt
@@ -1,8 +1,3 @@
-cmake_minimum_required(VERSION 3.22)
-
-enable_testing()
-include(CTest)
-
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/vendor/googletest-1.14.0)
 file(GLOB_RECURSE TESTS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 
@@ -13,5 +8,5 @@ foreach(TEST_FILE ${TESTS})
     add_executable(${TEST_NAME} ${TEST_FILE})
     target_link_libraries(${TEST_NAME} PRIVATE gtest gtest_main LilyPadEngine)
     LinkDependencies(${TEST_NAME})
-
+    message("Added test " ${TEST_NAME})
 endforeach()
