Made getting path more generic. Currently only supports linux paths

--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -8,6 +8,17 @@ set(CMAKE_CXX_STANDARD_REQUIRED YES)
 file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
 file(GLOB_RECURSE HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/src/*.hpp)
 
+file(GLOB_RECURSE SHADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/rsc/shaders/*.glsl)
+file(GLOB_RECURSE TEXTURE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/rsc/textures/*)
+
+foreach(SHADER_FILE ${SHADER_FILES})
+    file(COPY ${SHADER_FILE} DESTINATION ${CMAKE_BINARY_DIR}/demo/rsc/shaders)
+endforeach()
+
+foreach(TEXTURE_FILE ${TEXTURE_FILES})
+    file(COPY ${TEXTURE_FILE} DESTINATION ${CMAKE_BINARY_DIR}/demo/rsc/textures)
+endforeach()
+
 add_executable(Demo ${SOURCES} ${HEADERS})
 
 find_package(OpenGL REQUIRED)
@@ -23,5 +34,6 @@ target_link_libraries(Demo PRIVATE
     LilyPadEngine
     glfw
     OpenGL::GL
+    GLEW::GLEW
 )
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src ${CMAKE_CURRENT_SOURCE_DIR}/rsc)
