Remove old folder

--- a/LilyPadEngine/CMakeLists.txt
+++ b/LilyPadEngine/CMakeLists.txt
@@ -3,7 +3,7 @@ project(LilyPadEngine)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED YES)
 
-option(RUN_TESTS "" OFF)
+option(RUN_TESTS OFF)
 
 function (LinkDependencies Target)
     target_link_libraries(${Target} 
@@ -26,13 +26,6 @@ endif()
 # Add all cpp and hpp files to the library
 file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
 file(GLOB_RECURSE HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/src/*.hpp)
-
-file(GLOB_RECURSE SHADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/rsc/shaders/*.glsl)
-file(GLOB_RECURSE TEXTURE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/rsc/textures/*)
-
-foreach(SHADER_FILE ${SHADER_FILES})
-    file(COPY ${SHADER_FILE} DESTINATION ${CMAKE_BINARY_DIR}/rsc/shaders)
-endforeach()
 
 foreach(TEXTURE_FILE ${TEXTURE_FILES})
     file(COPY ${TEXTURE_FILE} DESTINATION ${CMAKE_BINARY_DIR}/rsc/textures)
@@ -57,7 +50,6 @@ target_include_directories(
     PUBLIC  # Can be used externally from the library
         ${CMAKE_CURRENT_SOURCE_DIR}/src
     PRIVATE # For internal use only
-        ${CMAKE_CURRENT_SOURCE_DIR}/rsc
         ${CMAKE_CURRENT_SOURCE_DIR}/vendor
 )
 
