Restructure some code

--- a/LilyPadEngine/CMakeLists.txt
+++ b/LilyPadEngine/CMakeLists.txt
@@ -3,7 +3,7 @@ project(LilyPadEngine)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED YES)
 
-option(RUN_TESTS "Build tests" ON)
+option(RUN_TESTS "Build tests" OFF)
 
 function (LinkDependencies Target)
     target_link_libraries(${Target} 
@@ -41,10 +41,7 @@ add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/vendor/glm)
 find_package(OpenGL REQUIRED)
 find_package(GLEW REQUIRED)
 
-add_library(LilyPadEngine ${LIBRARY_TYPE} ${SOURCES}
-        src/LilyPad/renderer/OpenGL/vertex.hpp
-        src/LilyPad/debug/errors.hpp
-        src/LilyPad/core/io/Key.hpp)
+add_library(LilyPadEngine ${LIBRARY_TYPE} ${SOURCES})
 
 add_library(stb_image ${LIBRARY_TYPE} "vendor/stb_image.cpp")
 
