--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -25,7 +25,11 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt update
+
         sudo apt install gcc-14 && g++-14
+        export CC=/usr/bin/gcc-14
+        export CXX=/usr/bin/g++-14
+      
         sudo apt-get install -y libgl1-mesa-dev libglew-dev libglfw3-dev
 
     - name: Configure CMake
