--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -1,4 +1,6 @@
-name: CMake on Ubuntu
+# This starter workflow is for a CMake project running on a single platform. There is a different starter workflow if you need cross-platform coverage.
+# See: https://github.com/actions/starter-workflows/blob/main/ci/cmake-multi-platform.yml
+name: CMake on a Ubuntu
 
 on:
   push:
@@ -7,51 +9,37 @@ on:
     branches: [ "main" ]
 
 env:
+  # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
   BUILD_TYPE: Release
 
 jobs:
   build:
+    # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
+    # You can convert this to a matrix build if you need cross-platform coverage.
+    # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
 
-    - name: Add GCC PPA and Install Dependencies
+    - name: Install dependencies
       run: |
         sudo apt update
-        sudo apt install -y software-properties-common
-        sudo add-apt-repository ppa:ubuntu-toolchain-r/test
-        sudo apt update
-        sudo apt list -a gcc-14 g++-14 || echo "gcc-14 or g++-14 not found in PPA"
-
-    - name: Install GCC from Source
-      if: failure() # Only run if previous step failed
-      run: |
-        sudo apt update
-        sudo apt install -y wget build-essential
-        wget https://ftp.gnu.org/gnu/gcc/gcc-14.0.0/gcc-14.0.0.tar.gz
-        tar -xzf gcc-14.0.0.tar.gz
-        cd gcc-14.0.0
-        ./contrib/download_prerequisites
-        mkdir build
-        cd build
-        ../configure --enable-languages=c,c++ --disable-multilib
-        make -j$(nproc)
-        sudo make install
-
-    - name: Set GCC 14 Environment Variables
-      run: |
-        export CC=/usr/local/bin/gcc
-        export CXX=/usr/local/bin/g++
-        echo "CC=${CC}" >> $GITHUB_ENV
-        echo "CXX=${CXX}" >> $GITHUB_ENV
+        sudo apt install gcc-14 && g++-14
+        sudo apt-get install -y libgl1-mesa-dev libglew-dev libglfw3-dev
+        sudo apt-get install libfreetype6-dev
 
     - name: Configure CMake
-      run: cmake -B ${{ github.workspace }}/build -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }} -DCMAKE_C_COMPILER=${{ env.CC }} -DCMAKE_CXX_COMPILER=${{ env.CXX }}
+      # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
+      # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
+      run: cmake -B ${{ github.workspace }}/build -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }}
 
     - name: Build
+      # Build your program with the given configuration
       run: cmake --build ${{ github.workspace }}/build --config ${{ env.BUILD_TYPE }}
 
     - name: Test
       working-directory: ${{ github.workspace }}/build
+      # Execute tests defined by the CMake configuration.
+      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest -C ${{ env.BUILD_TYPE }}
