--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,3 +4,5 @@ project(Demo)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/LilyPadEngine)
 
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/demo)
+
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/LilyPadEngine/src/Editor)
