--- a/Fleur/CMakeLists.txt
+++ b/Fleur/CMakeLists.txt
@@ -6,7 +6,9 @@ file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 file(GLOB_RECURSE HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
 
 add_executable(EditeurFleur ${SOURCES} ${HEADERS})
+find_package(OpenGL REQUIRED)
 
 target_link_libraries(EditeurFleur 
     MoteurLys
+    OpenGL::GL
 )
