--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,8 @@ option(RUN_TESTS "Build tests" ON)
 enable_testing()
 include(CTest)
 
+add_definitions(-DOpenGL)
+
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Lys)
 
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/demo)
