--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,12 @@
 cmake_minimum_required(VERSION 3.28.3)
 project(Demo)
 
-option(RUN_TESTS "Build tests" ON)
 
 enable_testing()
 include(CTest)
 
-add_definitions(-DOpenGL)
+add_definitions(-DOPENGL)
+#add_definitions(-DRUNTESTS)
 
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Lys)
 
