--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -22,10 +22,9 @@ jobs:
 
     - name: Install dependencies
       run: |
-        sudo apt update
-        sudo apt install gcc-14 && sudo apt install g++-14
-        sudo apt-get install -y libgl1-mesa-dev libglew-dev libglfw3-dev
-        sudo apt-get install libfreetype6-dev
+        cd scripts
+        ./linux.sh
+        cd ..
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
