--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -22,9 +22,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        cd scripts
-        sudo ./linux.sh
-        cd ..
+        sudo ./scripts/linux.sh
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
